--- a/app/src/main/res/layout/paint.xml
+++ b/app/src/main/res/layout/paint.xml
@@ -77,6 +77,7 @@
             android:orientation="vertical"
             android:padding="20dp"
             android:background="@color/colorPrimary"
+            android:visibility="gone"
             android:clickable="true" />
 
     </FrameLayout>
